# realtime-inference

./: .gitmodules  CMakeLists.txt  init.txt  orig.cpp  readme.md  test  test.cpp  test.nv12  test1  test1.cpp  test2  test2.cpp  test3  test3.cpp  v4l2_mpp_mjpeg
complete_examples/benchmark_inference_hailo/: CMakeLists.txt  readme.txt
complete_examples/benchmark_inference_hailo/include/: MPPEntity.hpp  hailoNN.hpp  queue.hpp  utils.hpp
complete_examples/benchmark_inference_hailo/src/: Pool.cpp  hailoNN.cpp  main.cpp  text.txt  utils.cpp
complete_examples/benchmark_inference_rknn/: CMakeLists.txt  readme.txt
complete_examples/benchmark_inference_rknn/include/: MPPEntity.hpp  Pool.hpp  rockChipNN.hpp
complete_examples/benchmark_inference_rknn/src/: MPPEntity.cpp  main.cpp  rockChipNN.cpp
include/: MPPEntity.hpp  Pool.hpp  camera.hpp  hailoNN.hpp  hailoPostprocess.hpp  neuralNetwork.hpp  queue.hpp  rockChipNN.hpp  utils.hpp
src/: MPPEntity.cpp  Pool.cpp  callBackMode.txt  camera.cpp  hailoNN.cpp  main.cpp  relay.cpp  rockChipNN.cpp  testMPP.txt  utils.cpp
